<resources>
    <string name="app_name">Radio Player</string>
    <string name="settings_activity_name">Settings</string>
    <string name="history_activity_name">History</string>
    <string name="saveTracks_activity_name">Save tracks</string>
    <string name="playback_history_activity_name">Playback history</string>
    <string name="add_station_activity_name">Add station</string>
    <string name="station_info_activity_name">Station info</string>
    <string name="maxTracks">Max stored tracks</string>
    <string name="saveTracks">Saved tracks directory</string>
    <string name="fab_add_station">Add station</string>
    <string name="fab_add_station_tooltip">Add station from catalog</string>
    <string name="playpause_desc">Toggle play/pause</string>
    <string name="playpause_tooltip">Play/pause</string>
    <string name="savetracks_desc">Open Save Tracks screen</string>
    <string name="savetracks_tooltip">Save tracks</string>
    <string name="stop_desc">Stop playing the current station</string>
    <string name="stop_tooltip">Stop playback</string>
    <string name="station_list_item_delete">Delete</string>
    <plurals name="station_list_item_selection">
        <item quantity="one">%d station</item>
        <item quantity="other">%d stations</item>
    </plurals>
    <string name="station_list_item_info">Station info"</string>
    <string name="founded_stations">Stations found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="station_name">Station name</string>
    <string name="station_home_page">Homepage</string>
    <string name="station_country">Country</string>
    <string name="station_file_format">Format</string>
    <string name="station_url">URL</string>
    <string name="save_folder_not_set">(Not set)</string>
</resources>
