<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StationInfoActivity">

    <TextView
        android:id="@+id/stationHomePageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/station_home_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stationCountryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="9dp"
        android:layout_marginTop="9dp"
        android:text="@string/station_country"
        app:layout_constraintStart_toStartOf="@+id/stationHomePageView"
        app:layout_constraintTop_toBottomOf="@+id/stationHomePageView" />

    <TextView
        android:id="@+id/stationFormatView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="9dp"
        android:layout_marginTop="6dp"
        android:text="@string/station_file_format"
        app:layout_constraintStart_toStartOf="@+id/stationCountryView"
        app:layout_constraintTop_toBottomOf="@+id/stationCountryView" />

    <TextView
        android:id="@+id/stationUrlView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/station_url"
        app:layout_constraintStart_toStartOf="@+id/stationFormatView"
        app:layout_constraintTop_toBottomOf="@+id/stationFormatView" />

    <TextView
        android:id="@+id/stationNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/station_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>