<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment"
    >

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_cover_placeholder_256"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/layer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <TextView
        android:id="@+id/tv_tracktitle"
        style="@style/PlayerTrackTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Track"
        app:layout_constraintBottom_toTopOf="@id/tv_trackartist"
        app:layout_constraintEnd_toEndOf="@id/layer"
        app:layout_constraintStart_toStartOf="@id/layer"
        app:layout_constraintTop_toTopOf="@id/layer"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_trackartist"
        style="@style/PlayerTrackArtistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist"
        app:layout_constraintBottom_toBottomOf="@id/layer"
        app:layout_constraintEnd_toEndOf="@id/layer"
        app:layout_constraintStart_toStartOf="@id/layer"
        app:layout_constraintTop_toBottomOf="@id/tv_tracktitle" />

    <ImageButton
        android:id="@+id/ib_playpause"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/playpause_desc"
        android:tooltipText="@string/playpause_tooltip"
        android:src="@drawable/ic_play_64"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@id/btnlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnlayer" />

    <ImageButton
        android:id="@+id/ib_savetracks"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/savetracks_desc"
        android:tooltipText="@string/savetracks_tooltip"
        android:src="@drawable/ic_save_48"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/ib_playpause"
        app:layout_constraintEnd_toStartOf="@+id/ib_playpause"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_playpause" />

    <ImageButton
        android:id="@+id/ib_stop"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop_desc"
        android:tooltipText="@string/stop_tooltip"
        android:src="@drawable/ic_stop_24"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/ib_playpause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/ib_playpause"
        app:layout_constraintTop_toTopOf="@+id/ib_playpause" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40sp"
        app:constraint_referenced_ids="tv_tracktitle,tv_trackartist"
        app:layout_constraintBottom_toTopOf="@id/btnlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cover"
        />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/btnlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        app:constraint_referenced_ids="ib_savetracks,ib_stop,ib_playpause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
